# NEXTNet

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  TODO.txt
NEXTNet.xcodeproj/: project.pbxproj
NEXTNet.xcodeproj/project.xcworkspace/xcuserdata/curesamuelcyrus.xcuserdatad/: WorkspaceSettings.xcsettings
NEXTNet.xcodeproj/project.xcworkspace/xcuserdata/fgp.xcuserdatad/: UserInterfaceState.xcuserstate
NEXTNet.xcodeproj/xcshareddata/xcschemes/: simulator Debug.xcscheme  simulator Release.xcscheme  tests Debug.xcscheme  tests Release.xcscheme
NEXTNet.xcodeproj/xcuserdata/curesamuelcyrus.xcuserdatad/xcschemes/: xcschememanagement.plist
benchmark/priority_queue/: extpq-concedges-benchmark.txt.bz2  extpq-seqedges-benchmark.txt.bz2  log.txt  pq-benchmark.Rmd  stdpq-concedges-benchmark.txt.bz2  stdpq-seqedges-benchmark.txt.bz2
compile-release-docker/: Dockerfile
epidemics/: NextReaction.cpp  NextReaction.h  NextReactionMeanField.cpp  NextReactionMeanField.h  REGIR.cpp  Tau.cpp  Tau.h  algorithm.cpp  algorithm.h  analysis.cpp  analysis.h  boguna.cpp  boguna.h  brownian_proximity_graph.cpp  brownian_proximity_graph.h  dynamic_graph.cpp  dynamic_graph.h  dynamic_graph.h~  graph.cpp  graph.h  laplaceInverse.cpp  laplaceInverse.h  main.cpp  nMGA.cpp  nMGA.h  permutation.h  random.cpp  random.h  savingData.cpp  savingData.h  simulation.cpp  simulation.h  stdafx.h  test.h  testing.h  types.h  utility.cpp  utility.h
epidemics.xcodeproj/: project.pbxproj
epidemics.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
epidemics.xcodeproj/project.xcworkspace/xcuserdata/curesamuelcyrus.xcuserdatad/: WorkspaceSettings.xcsettings
epidemics.xcodeproj/xcshareddata/xcschemes/: simulator Debug.xcscheme  simulator Release.xcscheme  tests Debug.xcscheme  tests Release.xcscheme
epidemics.xcodeproj/xcuserdata/curesamuelcyrus.xcuserdatad/xcschemes/: xcschememanagement.plist
epidemics/Comparaison/: boguna.cpp  boguna.h  masuda.cpp
epidemics/programs/: average.cpp  benchmark.cpp  benchmark_priorityqueue.cpp  custered_configuration_model_serrano.cpp  customtrajectory.cpp  profile.cpp  scale_free.cpp  sis_meanfield_gamma_gamma.cpp  trajectory.cpp
epidemics/tests/: REGIR.cpp  analytical.h  brownian_proximity_graph.cpp  dynamic_graph.cpp  dynamic_nextreaction.cpp  graph.cpp  main.cpp  meanfield.cpp  nextreaction.cpp  nmga.cpp  parallel.h  plot.cpp  plot.h  random.cpp  regir.cpp  simulate.h  statistics.h  stdafx.h  test_empirical_network.txt  utility.cpp
epidemics_update/: main.cpp
epidemics_update.xcodeproj/: project.pbxproj
epidemics_update.xcodeproj/xcuserdata/curesamuelcyrus.xcuserdatad/xcschemes/: xcschememanagement.plist
mathematica/: import.nb
nextnet/: .clang-format  NextReaction.cpp  NextReaction.h  NextReactionMeanField.cpp  NextReactionMeanField.h  REGIR.cpp  REGIR.h  algorithm.cpp  algorithm.h  analysis.cpp  analysis.h  brownian_proximity_graph.cpp  brownian_proximity_graph.h  brownian_proximity_network.cpp  brownian_proximity_network.h  dynamic_graph.cpp  graph.cpp  main.cpp  nMGA.cpp  nMGA.h  network.cpp  network.h  network_io.cpp  network_io.h  permutation.h  random.cpp  random.h  stdafx.h  temporal_network.cpp  temporal_network.h  types.h  utility.cpp  utility.h  weighted_network.cpp  weighted_network.h
nextnet/factories/: algorithm.cpp  algorithm.h  factories.cpp  factories.h  network.cpp  network.h  time.cpp  time.h
nextnet/programs/: average.cpp  benchmark.cpp  benchmark_priorityqueue.cpp  custered_configuration_model_serrano.cpp  customtrajectory.cpp  profile.cpp  simulate.cpp  sis_meanfield_gamma_gamma.cpp  trajectory.cpp
nextnet/pstream/: pstream.cpp  pstream.h
nextnet/tests/: REGIR.cpp  analytical.h  brownian_proximity_network.cpp  dynamic_graph.cpp  dynamic_nextreaction.cpp  gnuplot-iostream.h  graph.cpp  main.cpp  network.cpp  nextreaction.cpp  nmga.cpp  parallel.h  plot.cpp  plot.h  random.cpp  simulate.h  statistics.h  stdafx.h  temporal_network.cpp  temporal_nextreaction.cpp  utility.cpp  weighted_network.cpp
nextnet/tests/data/: college.tab
plots/: latex.gp  trajectory.gp
scripts/: build-release-docker-hbb.sh  build-release-linux.sh  build-release-mac.sh  compile-release-do.sh  compile-release.sh  make-release.sh  tag-release.sh
